--- a/cpf.css
+++ b/cpf.css
@@ -33,6 +33,7 @@ box-shadow: 1px 1px 3px 3px yellow;
 {
 
 border-color: rgb(255, 255, 0);  
-box-shadow: 1px 1px 3px 3px yellow;
+box-shadow: 1px 1px 3px 3px rgb(252, 252, 26);
   
 }
+
